# bdpm-ingest

./: .gitignore  CLAUDE.md  Cargo.toml  openapi.yaml
.github/workflows/: ci.yml  monthly-db-release.yml  monthly-sync.yml  release.yml  weekly-dispo.yml
.principled/archive/2026-05-29/scratch/: 001_initial.sql  (+30 more)
.principled/plans/: BRIEF.md  ROADMAP.md
.principled/scratch/: FINAL-action-list.md  architect-review.md  atc_codes_pk_analysis.md  compare-monitoring.md  compare-schemas.md  consolidated-audit.md  critic-github-actions.md  critic-review.md  critique-architecture-pipeline.md  critique-edge-cases.md  critique-schema-encoding.md  data-deep-dive.md  debate-sync-vs-async.md  edge-CIS_CIP_bdpm.md  external-etude_faisabilite.md  external-format_doc.md  external-md-catalog.md  final-audit-20md.md  github-actions-ci-research.md  implementer-dryrun.md  new-schema-comparison.md  remaining-challenges-brainstorm.md  research-minimal-api.md  review-brief-schema.md  selfcritic-our-fixes.md  selfreview-vulnerabilities.md  sync-frequency-research.md  verification-raw-data.md  verify-dispo-status.md  verify-live-urls.md  verify-orphans.md
benches/: benchmarks.rs
docs/: runbook.md
external_review/: 00_index.md  01_etat_des_lieux_sources.md  01_inventaire_des_fichiers.md  02_analyse_encodage.md  02_rapport_qualite_donnees.md  03_methodologie_collecte.md  03_schema_sqlite.md  04_strategie_mise_a_jour.md  04_strategie_parsing_normalisation.md  05_pipeline_transformation.md  05_schema_sqlite.md  06_architecture_pipeline_rust.md  06_architecture_rust.md  07_integrite_donnees.md  07_roadmap_implementation.md  08_apis_communautaires.md  08_risques_validation.md  BDPM_Analyse_Technique_Final.txt  BDPM_Etude_Faisabilite.txt  bdpm_feasibility_body.txt  format_doc.txt  review1.txt  review2.txt
raw/: CIS_CIP_Dispo_Spec.txt  CIS_CIP_bdpm.txt  CIS_COMPO_bdpm.txt  CIS_CPD_bdpm.txt  CIS_GENER_bdpm.txt  CIS_MITM.txt  HAS_LiensPageCT_bdpm.txt
src/: cache.rs  lib.rs  main.rs
src/api/: atc.rs  availability.rs  drugs.rs  groups.rs  mod.rs  openapi.rs  openapi.yaml  openapi_static.rs  rate_limit.rs  safety.rs  search.rs
src/db/: fts.rs  mod.rs  schema.sql
src/db/migrations/: 001_initial.sql  002_fix_smr_asmr_constraints.sql  003_remove_mitm_fk.sql  004_populate_atc_codes.sql  005_safety_alerts.sql  006_clean_data.sql  007_fix_fts5_schema.sql
src/download/: fetcher.rs  listing.rs  manifest.rs  mod.rs  state.rs
src/import/: mod.rs
src/normalize/: cpd.rs  date.rs  dedup.rs  fields.rs  html.rs  mod.rs  price.rs
src/normalize/snapshots/: bdpm_ingest__normalize__fields__strip_salt_snapshots__.snap  bdpm_ingest__normalize__fields__strip_salt_snapshots__BÉSILATE_D_AMLODIPINE.snap  bdpm_ingest__normalize__fields__strip_salt_snapshots__L-arginine.snap  bdpm_ingest__normalize__fields__strip_salt_snapshots__MÉSILATE_D_IMATINIB.snap  bdpm_ingest__normalize__fields__strip_salt_snapshots__amoxicilline_trihydratée.snap  bdpm_ingest__normalize__fields__strip_salt_snapshots__arginine.snap  bdpm_ingest__normalize__fields__strip_salt_snapshots__aspirine.snap  bdpm_ingest__normalize__fields__strip_salt_snapshots__atorvastatine_calcique.snap  bdpm_ingest__normalize__fields__strip_salt_snapshots__bicarbonate_de_sodium.snap  bdpm_ingest__normalize__fields__strip_salt_snapshots__bromure_d_ipratropium.snap  bdpm_ingest__normalize__fields__strip_salt_snapshots__bésilate_d_amlodipine.snap  (+13 more)
src/parse/: mod.rs  tab.rs
src/sync/: mod.rs
tests/: cli_integration.rs  integration.rs  server_integration.rs
(+37 files in other folders)
