[package]
name = "bdpm-ingest"
version = "0.1.0"
edition = "2021"
authors = ["Felix"]
description = "French public drug database (BDPM) ingest pipeline"

[lib]
name = "bdpm_ingest"
path = "src/lib.rs"
[[bin]]
name = "bdpm-ingest"
path = "src/main.rs"

[dependencies]
# SQLite — bundled for CI portability
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP fetcher — synchronous, no async runtime needed
ureq = { version = "2", features = ["native-tls"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Serialization (API types, listing dates)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encoding — BDPM files use Windows-1252 and UTF-8
encoding_rs = "0.8"

# Error handling
anyhow = "1"

# Hashing (file checksums for state tracking)
blake3 = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTML stripping
regex-lite = "0.1"

# API server
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# OpenAPI generation
utoipa = { version = "4", features = ["yaml"] }

[profile.release]
opt-level = 3
lto = true

[dev-dependencies]
hyper = "1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-test = "0.4"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# TSV/tabular parsing — indexing is intentional for fixed-format fields
indexing_slicing = "allow"
unwrap_used = "allow"
upper_case_acronyms = "warn"
await_holding_lock = "warn"
let_underscore_future = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
mem_forget = "warn"
float_cmp = "warn"
dbg_macro = "warn"
allow_attributes = "warn"

expect_used = "warn"

[lints.rustdoc]
missing_docs = "warn"
